--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
@@ -35,6 +35,18 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       />
     </noscript>
+    <!-- Open Graph meta tags for WhatsApp, Facebook, LinkedIn -->
+    <meta property="og:title" content="Hoods - Street Wear" />
+    <meta
+      property="og:description"
+      content="Shop Hoods streetwear — original skate-inspired clothing and gear for rebels and rule-breakers. Stand out with bold style and raw authenticity."
+    />
+    <meta
+      property="og:image"
+      content="https://hoodss.vercel.app/og-image.jpg"
+    />
+    <meta property="og:url" content="https://hoodss.vercel.app" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
