--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
     <link
       rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
@@ -28,6 +28,11 @@
         rel="stylesheet"
         type="text/css"
         href="https://fonts.googleapis.com/css2?family=Manufacturing+Consent&display=swap"
+      />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
+        rel="stylesheet"
+        type="text/css"
       />
       <link
         rel="stylesheet"
