--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     />
     <meta
       property="og:image"
-      content="https://hoodss.vercel.app/og-image.png"
+      content="https://hoodss.vercel.app/og-image.jpg"
     />
     <meta property="og:url" content="https://hoodss.vercel.app" />
     <meta property="og:type" content="website" />
